# cvpce

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  setup.cfg
cvpce/: classification_training.py  cli.py  datautils.py  defaults.py  metrics.py  planograms.py  production.py  proposals_eval.py  proposals_training.py  utils.py
cvpce/cli/: __init__.py  dihe.py  eval.py  gln.py  misc.py
cvpce/cli/datasets/: __init__.py  gp.py  grozi.py  internal.py  misc.py  sku110k.py
cvpce/models/: classification.py  proposals.py
test/: classification_training_test.py  metrics_test.py
test/models/: classification_test.py
thesis/: classification_eval.py  classification_training.py  cli.py  datautils.py  detection_eval.py  hyperopt.py  metrics.py  planogram_adapters.py  planograms.py  production.py  proposals_eval.py  proposals_training.py  utils.py
thesis/models/: classification.py  proposals.py
