[metadata]
name = cvpce
version = 1.0.0

[options]
packages = cvpce
install_requires =
    click
    matplotlib
    networkx
    opencv-python
    pillow
    pycocotools
    ray[tune]
    scikit-image
    squarify
    torch
    torchvision

[options.entry_points]
console_scripts =
    cvpce = cvpce.cli:cli